--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
 
             <div class="herocontent">
-                <img src="/img/image1.jpg" alt="vitamin c, ultra cee">
+                <img src="img/image1.jpg" alt="vitamin c, ultra cee">
             </div>
         </div>
     </div>
