--- a/index.html
+++ b/index.html
@@ -66,10 +66,23 @@
                 </div>
 
                 <div class="services__content">
-                    <h2>Affordable</h2>
-                    <p>Affordable yet Effective Medicines for Filipino People</p>
+
+                    <div class="serviceslogo">
+                        <img src="img/affordablelogo.png" alt="fda phlippines logo">
+                    </div>
+
+                    <div class="servicestext">
+                        <h2>Affordable</h2>
+                        <p>Affordable yet Effective Medicines for Filipino People</p>
+                    </div>
                 </div>
             </div>
+        </div>
+    </div>
+
+    <div class="section">
+        <div class="sectioncontainer">
+            <h2>Featured Products</h2>
         </div>
     </div>
     
