--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700;900&display=swap" rel="stylesheet">>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700;900&display=swap" rel="stylesheet">
     <title>Westfield Pharmaceuticals</title>
 </head>
 <body>
@@ -45,6 +45,7 @@
 
     <div class="section">
         <div class="sectioncontainer">
+            <h2 class="h2titles">Our Services</h2>
             <div class="services">
                 <div class="services__content">
 
@@ -53,7 +54,7 @@
                     </div>
 
                     <div class="servicestext">
-                        <h2>Quality First</h2>
+                        <h2>Quality</h2>
                         <p>100% Safe & Direct from Pharmaceutical Companies</p>
                     </div>
 
@@ -79,7 +80,7 @@
 
                     <div class="servicestext">
                         <h2>cGMP Certified</h2>
-                        <p>Medicines are Manufactured by cGMP Certified Company</p>
+                        <p>Medicines Distributed are cGMP Certfied</p>
                     </div>
                 </div>
 
@@ -91,7 +92,7 @@
 
                     <div class="servicestext">
                         <h2>Affordable</h2>
-                        <p>Affordable yet Effective Medicines for Filipino People</p>
+                        <p>Very Affordable Price for Bulk Orders</p>
                     </div>
                 </div>
             </div>
@@ -116,7 +117,7 @@
                 <div class="sectioncol">
                     <p><span class="textemp">W</span>estfield is one of the most respected pharmaceutical companies today offering healthcare business-to-business solutions and services. Established in 1994, Westfield stayed true to its business principle that creating lasting partnerships will be the driving force behind the growth of the company, its business and of its clientele. Westfield is committed to providing a one-stop-shop solution for businesses to expand their product portfolio by offering pharmaceutical products in whatever form.</p>
                     <br><br>
-                    <p>Our <span class="textemp2">Mission</span> is to provide high quality and cost effective medicines, superior services and commitment to customers</p>
+                    <p>Our <span class="textemp2">Mission</span> is to provide high quality and cost effective medicines, superior services and commitment to customers.</p>
                     <br><br>
                     <p>Our <span class="textemp2">Vision</span> is to become an essential business partner in the pharmaceutical industry in delivering healthcare solutions to Filipino people.</p>
                 </div>
