--- a/index.html
+++ b/index.html
@@ -129,6 +129,31 @@
         </div>
     </div>
 
+    <div class="featuredcontainer">
+        <div class="featuredsection">
+            <h2 class="featuredtitle">Featured Products</h2>
+            <div class="featured__row">
+                <div class="featured__col">
+                    <img src="img/productzuma.jpg" alt="">
+                </div>
+
+                <div class="featured__col">
+                    <img src="img/productasflem.jpg" alt="">
+                </div>
+
+                <div class="featured__col">
+                    <img src="img/productcranber.jpg" alt="">
+                </div>
+            </div>
+
+            <div class="buttoncontainer">
+                    <button>Browse All Products</button>
+            </div>
+            
+        </div>
+    </div>
+
+
     
 
 
