--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="hero">
         <div class="container">
             <div class="herocontent">
-                <h1>We Develop, Distribute and Market</h1>
+                <h1>We Develop,<br> Distribute and Market</h1>
                 <p>High Quality <span class="heroemphasize">Branded</span> & <span class="heroemphasize">Generic</span> Pharmaceutical Products</p>
                 <button>Contact Us</button> <button>Browse All Products</button>
             </div>
@@ -144,31 +144,40 @@
             <div class="swiper-container mySwiper">
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
-                    <img src="img/productzuma.jpg" />
+                    <img src="fproduct/productzuma.jpg" />
                   </div>
                   <div class="swiper-slide">
-                    <img src="img/productasflem.jpg" />
+                    <img src="fproduct/productasflem.jpg" />
                   </div>
                   <div class="swiper-slide">
-                    <img src="img/productcranber.jpg" />
+                    <img src="fproduct/productcranber.jpg" />
                   </div>
                   <div class="swiper-slide">
-                    <img src="https://swiperjs.com/demos/images/nature-4.jpg" />
+                    <img src="fproduct/ascorbc.jpg" />
                   </div>
                   <div class="swiper-slide">
-                    <img src="https://swiperjs.com/demos/images/nature-5.jpg" />
+                    <img src="fproduct/calcee.jpg" />
                   </div>
                   <div class="swiper-slide">
-                    <img src="https://swiperjs.com/demos/images/nature-6.jpg" />
+                    <img src="fproduct/calciumate.jpg" />
                   </div>
                   <div class="swiper-slide">
-                    <img src="https://swiperjs.com/demos/images/nature-7.jpg" />
+                    <img src="fproduct/ciumcee.jpg" />
                   </div>
                   <div class="swiper-slide">
-                    <img src="https://swiperjs.com/demos/images/nature-8.jpg" />
+                    <img src="fproduct/gcap.jpg" />
                   </div>
                   <div class="swiper-slide">
-                    <img src="https://swiperjs.com/demos/images/nature-9.jpg" />
+                    <img src="fproduct/kiddyfirst.jpg" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="fproduct/multizinc.jpg" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="fproduct/sambong.jpg" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="fproduct/ultracee.jpg" />
                   </div>
                 </div>
                 <div class="swiper-pagination"></div>
