--- a/index.html
+++ b/index.html
@@ -16,6 +16,28 @@
 </head>
 <body>
 
+  <header>
+    <div class="navcontainer">
+      <div class="row">
+
+        <a class="logo row" href="#">
+          <img src="img/westfieldlogo.jpg" alt="Westfield Pharmaceuticals Company Logo">
+          <h2>Westfield Pharmaceuticals Inc.</h2>
+        </a>
+
+        <nav class="nav">
+            <ul class="nav__list">
+              <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
+              <li class="nav__item"><a href="#" class="nav__link">About</a></li>
+              <li class="nav__item"><a href="#" class="nav__link">Contact</a></li>
+            </ul>
+        </nav>
+
+      </div>
+
+    </div>
+  </header>
+
     <div class="hero">
         <div class="container">
             <div class="herocontent">
