--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
 
         <a class="logo row" href="#">
           <img src="img/westfieldlogo.jpg" alt="Westfield Pharmaceuticals Company Logo">
-          <h2>Westfield Pharmaceuticals Inc.</h2>
+          <h2 class="companytitle">Westfield Pharmaceuticals Inc.</h2>
         </a>
 
         <nav class="nav">
             <ul class="nav__list">
-              <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
+              <li class="nav__item"><a href="index.html" class="nav__link">Home</a></li>
               <li class="nav__item"><a href="#" class="nav__link">About</a></li>
+              <li class="nav__item"><a href="#" class="nav__link">Products</a></li>
               <li class="nav__item"><a href="#" class="nav__link">Contact</a></li>
             </ul>
         </nav>
