--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
           <h2 class="companytitle"><i>Westfield Pharmaceuticals Inc.</i></h2>
         </a>
 
+        <a href="#" class="toggle-button">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </a>
+
         <nav class="nav">
             <ul class="nav__list">
               <li class="nav__item"><a href="index.html" class="nav__link">Home</a></li>
@@ -343,6 +349,17 @@
         el: ".swiper-pagination",
       },
     });
+  </script>
+
+  <!--Navigation Script-->
+
+  <script>
+    const toggleButton = document.getElementsByClassName('toggle-button')[0]
+    const navbar = document.getElementsByClassName('nav__list')[0]
+
+    toggleButton.addEventListener('click', () => {
+      navbar.classList.toggle('active')
+    })
   </script>
     
 </body>
